--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,60 @@
+# Compiled source #
+###################
+bin
+lib
+out
+target
+*.com
 *.class
+*.dll
+*.exe
+*.o
+*.so
 
-# Package Files #
+# Git #
+#######
+.git
+
+# Packages #
+############
+*.7z
+*.dmg
+*.gz
+*.iso
 *.jar
-*.war
-*.ear
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+ehthumbs.db
+Icon?
+Thumbs.db
+
+# Project files #
+#################
+.classpath
+.externalToolBuilders
+.project
+.settings
+MANIFEST.MF
+
+# Netbeans files #
+##################
+build
+dist
+nbproject
+build.xml
+
+# IntelliJ IDEA files #
+#######################
+.idea
+*.iml
